--- a/assets/css/templatemo-finance-business.css
+++ b/assets/css/templatemo-finance-business.css
@@ -336,9 +336,9 @@ header .navbar {
   display: block;
   overflow: hidden;
   position: relative;
-  text-align: center
+  text-align: center;
 }
-
+  
 .img-fill img {
   min-height: 100%;
   min-width: 100%;
@@ -380,8 +380,10 @@ header .navbar {
 	height:95vh;
 }
 
+
+
 .Modern-Slider .item-1 .img-fill {
-	background-image: url(../images/slide_01.jpg);
+	background-image: url();
 }
 
 .Modern-Slider .item-2 .img-fill {
@@ -438,7 +440,7 @@ ul.slick-dots {
 	text-align: left;
   	width: 75%;
   	position: absolute;
-  	top: 50%;
+  	top: 80%;
   	left: 50%;
   	transform: translate(-50%, -50%);
 }
